# elin-df

./: LICENSE  README.md  pyproject.toml
src/elin_df/: 0_config.json  0_config_output.json  0_config_solitons.json  Elin_Distribution_Function.py  MathFunctions.py  cli.py  file_utils.py  find_beta.py  fixShape_directStart_IonHoleBased.py  fixShape_quietStart_IonHoleBased.py  global_parameter.py  inputPattern.json  plot_quietstart.py
src/elin_df.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py
