[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elin-df"
version = "0.1.0"
description = "Elin distribution function and related tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mehdi Jenab" }
]

dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/MehdiJenab/elin-df"

[tool.setuptools.packages.find]
where = ["src"]
